# CDR

./: .gitignore  README.md  UPDATE_LOG.md  cdr_demo.py  pyproject.toml  requirements.txt
cdr/: __init__.py  cli.py  config.py  plots.py  recovery.py  signal.py
docs/: CDR_DEMO_EXPLAINED.md
