[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cdr-demo"
version = "0.2.0"
description = "Digital clock and data recovery simulation with NumPy, SciPy, Pandas, and Matplotlib."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.4.6",
  "matplotlib==3.10.9",
  "scipy==1.17.1",
  "pandas==3.0.3",
]

[project.scripts]
cdr-demo = "cdr.cli:main"

[tool.setuptools.packages.find]
include = ["cdr*"]
